force-app/main/default/objects/Contact/fields/Important_Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Relationship_Notes__c</fullName>
    <label>Important Contact Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>