force-app/main/default/objects/Contact/fields/Income_expenses_in_the_next_6_12_months__c.field-meta.xml
<CustomField>
    <fullName>Income_expenses_in_the_next_6_12_months__c</fullName>
    <label>Income/expenses in the next 6-12 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>