force-app/main/default/objects/Contact/fields/Insurance_and_medical__c.field-meta.xml
<CustomField>
    <fullName>Insurance_and_medical__c</fullName>
    <label>Insurance_and_medical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>