force-app/main/default/objects/Contact/fields/Insurance_Medical_Health__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Medical_Health__c</fullName>
    <formula>Medical_Private_Health_Insurance_Ong__c +  Insurances_Home_Personal_Voluntary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance, Medical &amp; Health</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>