force-app/main/default/objects/Contact/fields/Insurances_Home_Personal_Voluntary__c.field-meta.xml
<CustomField>
    <fullName>Insurances_Home_Personal_Voluntary__c</fullName>
    <label>General Insurance Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>