force-app/main/default/objects/Contact/fields/Investment_Property_Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Investment_Property_Loan_Repayment__c</fullName>
    <label>Investment Property Loan Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>