force-app/main/default/objects/Contact/fields/Investment_property_utilities__c.field-meta.xml
<CustomField>
    <fullName>Investment_property_utilities__c</fullName>
    <label>Investment property Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>