force-app/main/default/objects/Contact/fields/Is_Authorised_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Authorised_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authorised Signatory</label>
    <type>Checkbox</type>
</CustomField>