force-app/main/default/objects/Contact/fields/is_Email_verified_for_VOI__c.field-meta.xml
<CustomField>
    <fullName>is_Email_verified_for_VOI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Email verified for VOI</label>
    <type>Checkbox</type>
</CustomField>