force-app/main/default/objects/Contact/fields/Is_Find_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Find_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Find Address ?</label>
    <type>Checkbox</type>
</CustomField>