force-app/main/default/objects/Contact/fields/Is_Previous_Address_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Previous_Address_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Previous Address Same</label>
    <type>Checkbox</type>
</CustomField>