force-app/main/default/objects/Contact/fields/is_send_email__c.field-meta.xml
<CustomField>
    <fullName>is_send_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is send email</label>
    <type>Checkbox</type>
</CustomField>