force-app/main/default/objects/Contact/fields/isFindPostalAdd__c.field-meta.xml
<CustomField>
    <fullName>isFindPostalAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFindPostalAdd</label>
    <type>Checkbox</type>
</CustomField>