force-app/main/default/objects/Contact/fields/Judgements_or_legal_proceedings_recorded__c.field-meta.xml
<CustomField>
    <fullName>Judgements_or_legal_proceedings_recorded__c</fullName>
    <label>Judgement or legal proceedings recorded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>