force-app/main/default/objects/Contact/fields/Last_referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_referral_Date__c</fullName>
    <label>Last referral Date</label>
    <type>DateTime</type>
</CustomField>