force-app/main/default/objects/Contact/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own home outright</fullName>
            </value>
            <value>
                <fullName>Own home with mortgage</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Boarding with parents</fullName>
            </value>
            <value>
                <fullName>Boarding with other</fullName>
            </value>
            <value>
                <fullName>Supplied by employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>