force-app/main/default/objects/Contact/fields/LoginOtp__c.field-meta.xml
<CustomField>
    <fullName>LoginOtp__c</fullName>
    <label>LoginOtp</label>
    <length>4</length>
    <type>Text</type>
</CustomField>