force-app/main/default/objects/Contact/fields/Maintenance_If_pay_child_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_If_pay_child_maintenance__c</fullName>
    <label>Maintenance: If pay child maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>