force-app/main/default/objects/Contact/fields/Medical_Private_Health_Insurance_Ong__c.field-meta.xml
<CustomField>
    <fullName>Medical_Private_Health_Insurance_Ong__c</fullName>
    <label>Medical and Health Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>