force-app/main/default/objects/Contact/fields/Medicare_Card_Colour__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Card_Colour__c</fullName>
    <label>Medicare Card Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>