force-app/main/default/objects/Contact/fields/Medicare_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiry_Date__c</fullName>
    <label>Medicare Expiry Date</label>
    <type>Date</type>
</CustomField>