force-app/main/default/objects/Contact/fields/Medicare_Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiry_Month__c</fullName>
    <label>Medicare Expiry Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>