force-app/main/default/objects/Contact/fields/Medicare_Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiry_Year__c</fullName>
    <label>Medicare Expiry Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>