force-app/main/default/objects/Contact/fields/mercury__Mobile_Phone_Short__c.field-meta.xml
<CustomField>
    <fullName>mercury__Mobile_Phone_Short__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone, &apos;+&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone Short</label>
    <type>Text</type>
</CustomField>