force-app/main/default/objects/Contact/fields/mercury__SMS_Code__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Code__c</fullName>
    <description>When this field is populated with a template id, an SMS message is delivered to the recipients mobile number. (as long as they haven&apos;t opted out)</description>
    <label>SMS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>