force-app/main/default/objects/Contact/fields/mercury__SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>mercury__SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the client has opted out of receiving SMS messages</inlineHelpText>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>