force-app/main/default/objects/Contact/fields/Months_1__c.field-meta.xml
<CustomField>
    <fullName>Months_1__c</fullName>
    <label>Months</label>
    <length>3</length>
    <type>Text</type>
</CustomField>