force-app/main/default/objects/Contact/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <label>Months</label>
    <length>3</length>
    <type>Text</type>
</CustomField>