force-app/main/default/objects/Contact/fields/MotherMaidenName__c.field-meta.xml
<CustomField>
    <fullName>MotherMaidenName__c</fullName>
    <description>Mother&apos;s Maiden Name</description>
    <label>Mother&apos;s Maiden Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>