force-app/main/default/objects/Contact/fields/NextLifeEvent__c.field-meta.xml
<CustomField>
    <fullName>NextLifeEvent__c</fullName>
    <label>Next Life Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Enter Workforce</fullName>
            </value>
            <value>
                <fullName>Returning to Workforce</fullName>
            </value>
            <value>
                <fullName>First Home Purchase</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Renovations</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Critical Family Event</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>