force-app/main/default/objects/Contact/fields/Number_of_applicants_to_operate_account__c.field-meta.xml
<CustomField>
    <fullName>Number_of_applicants_to_operate_account__c</fullName>
    <label>Number of applicants to operate account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>either to sign</fullName>
            </value>
            <value>
                <fullName>both to sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>