force-app/main/default/objects/Contact/fields/NumberOfChildren__c.field-meta.xml
<CustomField>
    <fullName>NumberOfChildren__c</fullName>
    <label>NumberOfChildren</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>