force-app/main/default/objects/Contact/fields/On_Board_Individual__c.field-meta.xml
<CustomField>
    <fullName>On_Board_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Board Individual</label>
    <type>Checkbox</type>
</CustomField>