force-app/main/default/objects/Contact/fields/Other_income_p_a__c.field-meta.xml
<CustomField>
    <fullName>Other_income_p_a__c</fullName>
    <label>Other income p.a.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>