force-app/main/default/objects/Contact/fields/Other_loans_and_or_debt_commitments__c.field-meta.xml
<CustomField>
    <fullName>Other_loans_and_or_debt_commitments__c</fullName>
    <label>Other loans and/or debt commitments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>