force-app/main/default/objects/Contact/fields/Other_Regular_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Other_Regular_Expenditure__c</fullName>
    <label>Other Regular Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>