force-app/main/default/objects/Contact/fields/OtherCommitments__c.field-meta.xml
<CustomField>
    <fullName>OtherCommitments__c</fullName>
    <label>OtherCommitments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>