force-app/main/default/objects/Contact/fields/Personal_Insurances_life_and_income_pro__c.field-meta.xml
<CustomField>
    <fullName>Personal_Insurances_life_and_income_pro__c</fullName>
    <label>Personal Insurances Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>