force-app/main/default/objects/Contact/fields/PersonalAndAuto__c.field-meta.xml
<CustomField>
    <fullName>PersonalAndAuto__c</fullName>
    <label>PersonalAndAutoCommitments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>