force-app/main/default/objects/Contact/fields/PhoneForPortal__c.field-meta.xml
<CustomField>
    <fullName>PhoneForPortal__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(  MobilePhone  , &apos;+&apos;, &apos;&apos;), &apos;)&apos;, &apos;&apos;), &apos;(&apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;), &apos; &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PhoneForPortal</label>
    <type>Text</type>
</CustomField>