force-app/main/default/objects/Contact/fields/PO_box_number__c.field-meta.xml
<CustomField>
    <fullName>PO_box_number__c</fullName>
    <formula>IF(ISBLANK(TEXT(Postal_Box_Type__c)),&apos;&apos;,TEXT(Postal_Box_Type__c) +&apos; &apos;+ Postal_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO box number</label>
    <type>Text</type>
</CustomField>