force-app/main/default/objects/Contact/fields/Portal_View__c.field-meta.xml
<CustomField>
    <fullName>Portal_View__c</fullName>
    <label>Portal View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin View</fullName>
            </value>
            <value>
                <fullName>Referrer View</fullName>
                <default>true</default>
                <label>Referrer View</label>
            </value>
            <value>
                <fullName>Agent View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>