force-app/main/default/objects/Contact/fields/Postal_address_is_PO_or_GPO_box__c.field-meta.xml
<CustomField>
    <fullName>Postal_address_is_PO_or_GPO_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal address is a PO Box or GPO box</label>
    <type>Checkbox</type>
</CustomField>