force-app/main/default/objects/Contact/fields/Postal_Box_Type__c.field-meta.xml
<CustomField>
    <fullName>Postal_Box_Type__c</fullName>
    <label>Box Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO Box</fullName>
            </value>
            <value>
                <fullName>GPO Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>