force-app/main/default/objects/Contact/fields/Postal_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_2__c</fullName>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>