force-app/main/default/objects/Contact/fields/Postal_Country__c.field-meta.xml
<CustomField>
    <fullName>Postal_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>