force-app/main/default/objects/Contact/fields/Postal_Number__c.field-meta.xml
<CustomField>
    <fullName>Postal_Number__c</fullName>
    <label>Postal Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>