force-app/main/default/objects/Contact/fields/Postal_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Postal_PO_Box__c</fullName>
    <label>PO Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>