force-app/main/default/objects/Contact/fields/Postal_State__c.field-meta.xml
<CustomField>
    <fullName>Postal_State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>