force-app/main/default/objects/Contact/fields/Postal_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Postal_Street_Number__c</fullName>
    <label>Postal Street Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>