force-app/main/default/objects/Contact/fields/Postal_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Postal_Unit_Number__c</fullName>
    <label>Postal Unit Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>