force-app/main/default/objects/Contact/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <label>Preferred Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>