force-app/main/default/objects/Contact/fields/Primary_Employer_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Job_Title__c</fullName>
    <label>Primary Employer Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>