force-app/main/default/objects/Contact/fields/Primary_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employer_Name__c</fullName>
    <label>Primary Employer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>