force-app/main/default/objects/Contact/fields/PrimaryAddressIsBilling__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressIsBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates Billing Address as the primary address.</description>
    <label>Primary Address (Billing)</label>
    <type>Checkbox</type>
</CustomField>