force-app/main/default/objects/Contact/fields/PrimaryAddressIsOther__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAddressIsOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Address (Other)</label>
    <type>Checkbox</type>
</CustomField>