force-app/main/default/objects/Contact/fields/PrimaryCitizenship__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCitizenship__c</fullName>
    <label>Primary Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>