force-app/main/default/objects/Contact/fields/PrimaryLanguage__c.field-meta.xml
<CustomField>
    <fullName>PrimaryLanguage__c</fullName>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>