force-app/main/default/objects/Contact/fields/Property_including_Rates_Utilities_Manag__c.field-meta.xml
<CustomField>
    <fullName>Property_including_Rates_Utilities_Manag__c</fullName>
    <formula>Utilities__c +  Connections_Phone_Mobile_Internet_C__c +  Household_Purchases_and_Maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property including Rates/Utilities/Manag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>